--- a/admin-hf-setting.html
+++ b/admin-hf-setting.html
@@ -8,9 +8,9 @@
     :root{--card-bg:#fff;--ink:#1f2937;--muted:#6b7280;--line:#e5e7eb;--shadow:0 2px 10px rgba(0,0,0,.06);--brand:#2563eb;--ok:#10b981;--err:#ef4444}
     *{box-sizing:border-box;font-family:"Segoe UI","Noto Sans JP",system-ui,sans-serif}
     body{margin:0;background:#f6f7f9;color:var(--ink)}
-    .wrap{max-width:960px;margin:24px auto;padding:0 16px}
+    .wrap{max-width:1080px;margin:24px auto;padding:0 16px}
     h1{font-size:22px;margin:8px 0 20px}
-    .card{background:var(--card-bg);border-radius:14px;box-shadow:var(--shadow);padding:16px;margin-bottom:20px;display:flex;flex-direction:column;gap:12px}
+    .card{background:var(--card-bg);border-radius:14px;box-shadow:var(--shadow);padding:16px;margin-bottom:20px}
     .panel-head{display:flex;gap:12px;align-items:center;justify-content:space-between}
     .panel-head h2{font-size:18px;margin:0}
     .actions{display:flex;gap:12px;align-items:center}
@@ -19,9 +19,9 @@
     .btn:hover{transform:translateY(-1px);box-shadow:0 6px 16px rgba(0,0,0,.08)}
     .btn.primary{background:var(--brand);color:#fff}
     .btn.small{padding:4px 8px;font-size:12px}
-    .preview{border:2px dashed var(--line);border-radius:12px;background:#f8fafc;padding:18px;min-height:72px}
-    .groups{display:flex;flex-direction:column;gap:14px}
-    fieldset.group{border:1px solid var(--line);border-radius:12px;padding:12px}
+    .preview{border:2px dashed var(--line);border-radius:12px;background:#f8fafc;padding:18px;min-height:72px;margin-bottom:14px}
+    .groups{display:flex;flex-wrap:wrap;gap:14px}
+    fieldset.group{border:1px solid var(--line);border-radius:12px;padding:12px;flex:1 1 260px}
     fieldset.group legend{padding:0 6px;color:var(--muted);font-size:13px}
     .field{display:flex;flex-direction:column;gap:6px;margin-bottom:8px}
     .field label{font-size:13px;font-weight:700;color:#374151}
@@ -48,71 +48,53 @@
   <div class="wrap" id="app">
     <h1>ヘッダー & フッター設定</h1>
 
-    <!-- ===== ヘッダー設定 ===== -->
+    <!-- ヘッダー設定 -->
     <section class="card">
       <div class="panel-head">
         <h2>ヘッダー設定</h2>
         <div class="actions">
           <label class="inline">行レイアウト
             <select id="header_layout_mode">
-              <option value="row">1行（会社名・ナビ 横並び）</option>
-              <option value="column">2行（上：会社名／下：ナビ）</option>
+              <option value="row">1行（横並び）</option>
+              <option value="column">2行（縦並び）</option>
             </select>
           </label>
           <button id="saveHeader" class="btn primary">保存</button>
         </div>
       </div>
       <div id="headerPreview" class="preview"></div>
-
       <div class="groups">
         <!-- ロゴ -->
-        <fieldset class="group">
-          <legend>ロゴ</legend>
+        <fieldset class="group"><legend>ロゴ</legend>
           <div class="field"><label>URL</label><input id="logo_url" type="text"></div>
-          <div class="field"><label>ロゴ高さ(px)</label><input id="logo_height" type="number" min="0" step="1" value="48"></div>
-          <div class="field"><label>ロゴ位置</label>
-            <select id="logo_alignment"><option>left</option><option>center</option><option>right</option></select>
-          </div>
+          <div class="field"><label>高さ(px)</label><input id="logo_height" type="number"></div>
+          <div class="field"><label>位置</label><select id="logo_alignment"><option>left</option><option>center</option><option>right</option></select></div>
         </fieldset>
-
         <!-- 社名 -->
-        <fieldset class="group">
-          <legend>社名</legend>
+        <fieldset class="group"><legend>社名</legend>
           <div class="field"><label>会社名</label><input id="company_name" type="text"></div>
-          <div class="field"><label>会社名位置</label>
-            <select id="company_alignment"><option>left</option><option>center</option><option>right</option></select>
-          </div>
-          <div class="field"><label>文字色</label><input id="company_color" type="color"></div>
-          <div class="field"><label>文字太さ</label>
-            <select id="company_weight"><option>normal</option><option>bold</option></select>
-          </div>
+          <div class="field"><label>位置</label><select id="company_alignment"><option>left</option><option>center</option><option>right</option></select></div>
+          <div class="field"><label>色</label><input id="company_color" type="color"></div>
+          <div class="field"><label>太さ</label><select id="company_weight"><option>normal</option><option>bold</option></select></div>
         </fieldset>
-
         <!-- ナビ -->
-        <fieldset class="group">
-          <legend>ナビ</legend>
-          <div class="field"><label>ナビ位置</label>
-            <select id="nav_alignment"><option>left</option><option>center</option><option>right</option></select>
-          </div>
-          <div class="field"><label>文字色</label><input id="nav_color" type="color"></div>
-          <div class="field"><label>文字太さ</label>
-            <select id="nav_weight"><option>normal</option><option>bold</option></select>
-          </div>
+        <fieldset class="group"><legend>ナビ</legend>
+          <div class="field"><label>位置</label><select id="nav_alignment"><option>left</option><option>center</option><option>right</option></select></div>
+          <div class="field"><label>色</label><input id="nav_color" type="color"></div>
+          <div class="field"><label>太さ</label><select id="nav_weight"><option>normal</option><option>bold</option></select></div>
         </fieldset>
-
         <!-- 全体 -->
-        <fieldset class="group">
-          <legend>全体</legend>
+        <fieldset class="group"><legend>全体</legend>
           <div class="field"><label>フォント</label><input id="font_family" type="text"></div>
-          <div class="field"><label>文字サイズ(px)</label><input id="font_size" type="number" min="8" step="1"></div>
+          <div class="field"><label>サイズ(px)</label><input id="font_size" type="number"></div>
           <div class="field"><label>背景色</label><input id="bg_color" type="color"></div>
           <div class="field"><label>パディング</label><input id="padding" type="text"></div>
-          <div class="field"><label>リンク間隔(px)</label><input id="link_spacing" type="number" min="0" step="1"></div>
+          <div class="field"><label>リンク間隔</label><input id="link_spacing" type="number"></div>
           <div class="field"><label>グラデーション</label>
             <div class="grad-row">
               <select id="grad_dir"><option value="to right">→</option><option value="to left">←</option><option value="to bottom">↓</option><option value="to top">↑</option></select>
               <input id="grad_start" type="color"><input id="grad_end" type="color">
-              <input id="bg_gradient" type="text" placeholder="linear-gradient(...)" title="直接入力も可">
+              <input id="bg_gradient" type="text">
               <button id="grad_reset" class="btn small">リセット</button>
             </div>
           </div>
@@ -120,60 +102,48 @@
       </div>
     </section>
 
-    <!-- ===== フッター設定 ===== -->
+    <!-- フッター設定 -->
     <section class="card">
       <div class="panel-head">
         <h2>フッター設定</h2>
         <div class="actions">
           <label class="inline">行レイアウト
             <select id="footer_layout_mode">
-              <option value="nav-bottom">2行（上：ナビ／下：コピーライト）</option>
-              <option value="nav-top">2行（上：コピーライト／下：ナビ）</option>
-              <option value="row">1行（横並び）</option>
+              <option value="nav-bottom">ナビ上／コピー下</option>
+              <option value="nav-top">コピー上／ナビ下</option>
+              <option value="row">横並び</option>
             </select>
           </label>
           <button id="saveFooter" class="btn primary">保存</button>
         </div>
       </div>
       <div id="footerPreview" class="preview"></div>
-
       <div class="groups">
         <!-- コピーライト -->
-        <fieldset class="group">
-          <legend>コピーライト</legend>
+        <fieldset class="group"><legend>コピーライト</legend>
           <div class="field"><label>テキスト</label><input id="footer_text" type="text"></div>
-          <div class="field"><label>配置</label>
-            <select id="footer_alignment"><option>left</option><option>center</option><option>right</option></select>
-          </div>
-          <div class="field"><label>文字色</label><input id="footer_color" type="color"></div>
+          <div class="field"><label>位置</label><select id="footer_alignment"><option>left</option><option>center</option><option>right</option></select></div>
+          <div class="field"><label>色</label><input id="footer_color" type="color"></div>
         </fieldset>
-
         <!-- ナビ -->
-        <fieldset class="group">
-          <legend>ナビ</legend>
-          <div class="field"><label>ナビ位置</label>
-            <select id="nav_alignment_footer"><option>left</option><option>center</option><option>right</option></select>
-          </div>
-          <div class="field"><label>文字色</label><input id="nav_color_footer" type="color"></div>
-          <div class="field"><label>文字太さ</label>
-            <select id="nav_weight_footer"><option>normal</option><option>bold</option></select>
-          </div>
-          <div class="field"><label>固定表示</label><input id="footer_fixed" type="checkbox"></div>
+        <fieldset class="group"><legend>ナビ</legend>
+          <div class="field"><label>位置</label><select id="nav_alignment_footer"><option>left</option><option>center</option><option>right</option></select></div>
+          <div class="field"><label>色</label><input id="nav_color_footer" type="color"></div>
+          <div class="field"><label>太さ</label><select id="nav_weight_footer"><option>normal</option><option>bold</option></select></div>
+          <div class="field"><label>固定</label><input id="footer_fixed" type="checkbox"></div>
         </fieldset>
-
         <!-- 全体 -->
-        <fieldset class="group">
-          <legend>全体</legend>
+        <fieldset class="group"><legend>全体</legend>
           <div class="field"><label>フォント</label><input id="font_family_footer" type="text"></div>
-          <div class="field"><label>文字サイズ(px)</label><input id="font_size_footer" type="number" min="8" step="1"></div>
+          <div class="field"><label>サイズ(px)</label><input id="font_size_footer" type="number"></div>
           <div class="field"><label>背景色</label><input id="bg_color_footer" type="color"></div>
           <div class="field"><label>パディング</label><input id="padding_footer" type="text"></div>
-          <div class="field"><label>リンク間隔(px)</label><input id="link_spacing_footer" type="number" min="0" step="1"></div>
+          <div class="field"><label>リンク間隔</label><input id="link_spacing_footer" type="number"></div>
           <div class="field"><label>グラデーション</label>
             <div class="grad-row">
               <select id="grad_dir_footer"><option value="to right">→</option><option value="to left">←</option><option value="to bottom">↓</option><option value="to top">↑</option></select>
               <input id="grad_start_footer" type="color"><input id="grad_end_footer" type="color">
-              <input id="bg_gradient_footer" type="text" placeholder="linear-gradient(...)" title="直接入力も可">
+              <input id="bg_gradient_footer" type="text">
               <button id="grad_reset_footer" class="btn small">リセット</button>
             </div>
           </div>
@@ -191,21 +161,20 @@
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
     );
 
-    const $ = (q,root=document)=>root.querySelector(q);
-    const $$ = (q,root=document)=>[...root.querySelectorAll(q)];
-    const toast = (msg,ok=true)=>{ const n=document.createElement("div"); n.className="toast "+(ok?"ok":"err"); n.textContent=msg; $("#toast").appendChild(n); setTimeout(()=>n.remove(),2200); };
+    const $=(q,r=document)=>r.querySelector(q);
+    const $$=(q,r=document)=>[...r.querySelectorAll(q)];
+    const toast=(msg,ok=true)=>{const n=document.createElement("div");n.className="toast "+(ok?"ok":"err");n.textContent=msg;$("#toast").appendChild(n);setTimeout(()=>n.remove(),2200)};
 
     let menus=[];
-
-    const toJustify=p=>p==="left"?"flex-start":(p==="right"?"flex-end":"center");
+    const toJustify=p=>p==="left"?"flex-start":p==="right"?"flex-end":"center";
 
     function headerHTML(d){
       const items=menus.filter(m=>m.is_active&&m.show_in_header).map(m=>`<span>${m.title}</span>`).join("");
       const dir=$("#header_layout_mode").value;
       const bg=d.bg_gradient||d.bg_color||"#0f172a";
-      const nameBlock=`<div class="brand" style="color:${d.company_color};font-weight:${d.company_weight};justify-content:${toJustify(d.company_alignment)}">${d.logo_url?`<img src="${d.logo_url}" style="height:${d.logo_height}px">`:""}<span>${d.company_name}</span></div>`;
-      const navBlock=`<div class="nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)}">${items}</div>`;
-      const inner=dir==="column"?`${nameBlock}${navBlock}`:`<div style="flex:1">${nameBlock}</div>${navBlock}`;
+      const name=`<div class="brand" style="color:${d.company_color};font-weight:${d.company_weight};justify-content:${toJustify(d.company_alignment)}">${d.logo_url?`<img src="${d.logo_url}" style="height:${d.logo_height}px">`:""}<span>${d.company_name}</span></div>`;
+      const nav=`<div class="nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)}">${items}</div>`;
+      const inner=dir==="column"?`${name}${nav}`:`<div style="flex:1">${name}</div>${nav}`;
       return `<div class="hfbar ${dir}" style="background:${bg};font-family:${d.font_family};font-size:${d.font_size}px;padding:${d.padding};--gap:${d.link_spacing}px">${inner}</div>`;
     }
 
@@ -216,14 +185,15 @@
       const copy=`<div class="copy" style="color:${d.footer_color};justify-content:${toJustify(d.footer_alignment)}">${d.footer_text}</div>`;
       let inner="";
       if(d.footer_layout_mode==="row") inner=`${copy}${nav}`;
-      else if(d.footer_layout_mode==="nav-top") inner=`${copy}${nav}`;
-      else inner=`${nav}${copy}`;
+      else if(d.footer_layout_mode==="nav-top") inner=`${nav}${copy}`;
+      else inner=`${copy}${nav}`;
       const fixed=d.footer_fixed?"position:sticky;bottom:0;":"";
       return `<div class="hfbar ${d.footer_layout_mode==="row"?"row":"column"}" style="${fixed}background:${bg};font-family:${d.font_family};font-size:${d.font_size}px;padding:${d.padding};--gap:${d.link_spacing}px">${inner}</div>`;
     }
 
-    async function loadMenus(){const {data,error}=await supabase.from("public_menus").select("*").order("sort_order",{ascending:true});if(error){console.error(error);toast("メニュー読み込み失敗",false);return[]}return data||[]}
-    async function loadRow(area){const {data,error}=await supabase.from("hf_settings").select("*").eq("area",area).single();if(error){console.error(error);toast(`${area} 読み込み失敗`,false);return{}}return data||{}}
-    async function saveRow(area,payload){const {error}=await supabase.from("hf_settings").update(payload).eq("area",area);if(error){console.error(error);toast("保存失敗",false);return false}toast("保存しました");return true}
+    async function loadMenus(){const {data,error}=await supabase.from("public_menus").select("*").order("sort_order");if(error){toast("メニュー読み込み失敗",false);return[]}return data||[]}
+    async function loadRow(area){const {data}=await supabase.from("hf_settings").select("*").eq("area",area).single();return data||{}}
+    async function saveRow(area,payload){const {error}=await supabase.from("hf_settings").update(payload).eq("area",area);if(error){toast("保存失敗",false);return}toast("保存しました")}
 
-    function getHeader(){return{logo_url:$("#logo_url").value,logo_height:Number($("#logo_height").value||0
+    function getHeader(){return{logo_url:$("#logo_url").value,logo_height:Number($("#logo_height").value),logo_alignment:$("#logo_alignment").value,company_name:$("#company_name").value,company_alignment:$("#company_alignment").value,company_color:$("#company_color").value,company_weight:$("#company_weight").value,nav_alignment:$("#nav_alignment").value,nav_color:$("#nav_color").value,nav_weight:$("#nav_weight").value,font_family:$("#font_family").value,font_size:Number($("#font_size").value),bg_color:$("#bg_color").value,padding:$("#padding").value,link_spacing:Number($("#link_spacing").value),bg_gradient:$("#bg_gradient").value}}}
+    function setHeader(r){$("#logo_url").value=r.logo_url||"";$("#logo_height").value=r.logo_height||48;$("#logo_alignment").value=r.logo_alignment||"left";$("#company_name").value=r.company_name||"";$("#company_alignment").value=r.company_alignment||"left";$("#company_color
