--- a/admin-hf-setting.html
+++ b/admin-hf-setting.html
@@ -21,9 +21,7 @@
       <fieldset class="group"><legend>ロゴ</legend>
         <div class="field"><label>URL</label><input id="logo_url" type="text"></div>
         <div class="field"><label>高さ(px)</label><input id="logo_height" type="number"></div>
-        <div class="field"><label>位置</label>
-          <select id="logo_alignment"><option>left</option><option>center</option><option>right</option></select>
-        </div>
+        <div class="field"><label>位置</label><select id="logo_alignment"><option>left</option><option>center</option><option>right</option></select></div>
       </fieldset>
       <!-- 社名 -->
       <fieldset class="group"><legend>社名</legend>
@@ -40,17 +38,15 @@
       </fieldset>
       <!-- 全体 -->
       <fieldset class="group"><legend>全体</legend>
-        <div class="field"><label>フォントサイズ(px)</label><input id="font_size" type="number"></div>
-        <div class="field"><label>ヘッダー高さ(px)</label><input id="bar_height" type="number"></div>
-        <div class="field"><label>パディング</label><input id="padding" type="text"></div>
-        <div class="field"><label>リンク間隔</label><input id="link_spacing" type="number"></div>
-        <div class="field"><label>背景色</label><input id="bg_color" type="color"></div>
+        <div class="field"><label>フォントサイズ(px)</label><input id="font_size_header" type="number"></div>
+        <div class="field"><label>ヘッダー高さ(px)</label><input id="bar_height_header" type="number"></div>
+        <div class="field"><label>パディング</label><input id="padding_header" type="text"></div>
+        <div class="field"><label>リンク間隔</label><input id="link_spacing_header" type="number"></div>
+        <div class="field"><label>背景色</label><input id="bg_color_header" type="color"></div>
         <div class="field"><label>背景グラデーション</label>
           <div class="grad-row">
-            <select id="grad_dir"><option value="to right">→</option><option value="to left">←</option><option value="to bottom">↓</option><option value="to top">↑</option></select>
-            <input id="grad_start" type="color"><input id="grad_end" type="color">
-            <input id="bg_gradient" type="text">
-            <button id="grad_reset" class="btn small">リセット</button>
+            <input id="bg_gradient_header" type="text">
+            <button id="grad_reset_header" class="btn small">リセット</button>
           </div>
         </div>
       </fieldset>
@@ -96,8 +92,6 @@
         <div class="field"><label>背景色</label><input id="bg_color_footer" type="color"></div>
         <div class="field"><label>背景グラデーション</label>
           <div class="grad-row">
-            <select id="grad_dir_footer"><option value="to right">→</option><option value="to left">←</option><option value="to bottom">↓</option><option value="to top">↑</option></select>
-            <input id="grad_start_footer" type="color"><input id="grad_end_footer" type="color">
             <input id="bg_gradient_footer" type="text">
             <button id="grad_reset_footer" class="btn small">リセット</button>
           </div>
@@ -117,42 +111,25 @@
   const $=(q,r=document)=>r.querySelector(q);
   const toast=(msg,ok=true)=>{const n=document.createElement("div");n.className="toast "+(ok?"ok":"err");n.textContent=msg;$("#toast").appendChild(n);setTimeout(()=>n.remove(),2200)};
 
-  let menus=[];
-  const toJustify=p=>p==="left"?"flex-start":p==="right"?"flex-end":"center";
-
-  async function loadMenus(){const {data,error}=await supabase.from("public_menus").select("*").order("sort_order");if(error){toast("メニュー読み込み失敗",false);return[]}return data||[]}
   async function loadRow(area){const {data,error}=await supabase.from("hf_settings").select("*").eq("area",area).single();if(error)return{};return data||{}}
   async function saveRow(area,payload){const {error}=await supabase.from("hf_settings").update(payload).eq("area",area);if(error){toast("保存失敗",false);return}toast("保存しました")}
 
   function headerHTML(d){
-    const items=menus.filter(m=>m.is_active&&m.show_in_header).map(m=>`<span>${m.title}</span>`).join("");
     const bg=d.bg_gradient||d.bg_color||"#0f172a";
-    const name=`<div class="brand" style="color:${d.company_color};font-weight:${d.company_weight};justify-content:${toJustify(d.company_alignment)}">${d.logo_url?`<img src="${d.logo_url}" style="height:${d.logo_height}px">`:""}<span>${d.company_name}</span></div>`;
-    const nav=`<div class="nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)}">${items}</div>`;
-    const inner=d.layout_mode==="column"?`${name}${nav}`:`<div style="flex:1">${name}</div>${nav}`;
-    return `<div class="hfbar ${d.layout_mode}" style="background:${bg};font-size:${d.font_size}px;height:${d.bar_height}px;padding:${d.padding};--gap:${d.link_spacing}px">${inner}</div>`;
+    return `<div class="hfbar ${d.layout_mode}" style="background:${bg};font-size:${d.font_size}px;height:${d.bar_height}px;padding:${d.padding};--gap:${d.link_spacing}px">ヘッダープレビュー</div>`;
   }
-
   function footerHTML(d){
-    const items=menus.filter(m=>m.is_active&&m.show_in_footer).map(m=>`<span>${m.title}</span>`).join("");
     const bg=d.bg_gradient||d.bg_color||"#0f172a";
-    const nav=`<div class="nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)}">${items}</div>`;
-    const copy=`<div class="copy" style="color:${d.footer_color};justify-content:${toJustify(d.footer_alignment)}">${d.footer_text}</div>`;
-    let inner="";
-    if(d.layout_mode==="row") inner=`${copy}${nav}`;
-    else if(d.layout_mode==="nav-top") inner=`${nav}${copy}`;
-    else inner=`${copy}${nav}`;
-    const fixed=d.footer_fixed?"position:sticky;bottom:0;":"";
-    return `<div class="hfbar ${d.layout_mode==="row"?"row":"column"}" style="${fixed}background:${bg};font-size:${d.font_size}px;height:${d.bar_height}px;padding:${d.padding};--gap:${d.link_spacing}px">${inner}</div>`;
+    return `<div class="hfbar ${d.layout_mode}" style="background:${bg};font-size:${d.font_size}px;height:${d.bar_height}px;padding:${d.padding};--gap:${d.link_spacing}px">フッタープレビュー</div>`;
   }
 
   function getHeader(){return{
     logo_url:$("#logo_url").value,logo_height:Number($("#logo_height").value),logo_alignment:$("#logo_alignment").value,
     company_name:$("#company_name").value,company_alignment:$("#company_alignment").value,company_color:$("#company_color").value,company_weight:$("#company_weight").value,
     nav_alignment:$("#nav_alignment").value,nav_color:$("#nav_color").value,nav_weight:$("#nav_weight").value,
-    font_size:Number($("#font_size").value),bar_height:Number($("#bar_height").value),padding:$("#padding").value,link_spacing:Number($("#link_spacing").value),
-    bg_color:$("#bg_color").value,bg_gradient:$("#bg_gradient").value,layout_mode:$("#header_layout_mode").value}}
-  function setHeader(r){$("#logo_url").value=r.logo_url||"";$("#logo_height").value=r.logo_height||48;$("#logo_alignment").value=r.logo_alignment||"left";$("#company_name").value=r.company_name||"";$("#company_alignment").value=r.company_alignment||"left";$("#company_color").value=r.company_color||"#000000";$("#company_weight").value=r.company_weight||"normal";$("#nav_alignment").value=r.nav_alignment||"right";$("#nav_color").value=r.nav_color||"#000000";$("#nav_weight").value=r.nav_weight||"normal";$("#font_size").value=r.font_size||14;$("#bar_height").value=r.bar_height||60;$("#padding").value=r.padding||"8px";$("#link_spacing").value=r.link_spacing||16;$("#bg_color").value=r.bg_color||"#ffffff";$("#bg_gradient").value=r.bg_gradient||"";$("#header_layout_mode").value=r.layout_mode||"row";$("#headerPreview").innerHTML=headerHTML(r)}
+    font_size:Number($("#font_size_header").value),bar_height:Number($("#bar_height_header").value),padding:$("#padding_header").value,link_spacing:Number($("#link_spacing_header").value),
+    bg_color:$("#bg_color_header").value,bg_gradient:$("#bg_gradient_header").value,layout_mode:$("#header_layout_mode").value}}
+  function setHeader(r){$("#logo_url").value=r.logo_url||"";$("#logo_height").value=r.logo_height||48;$("#logo_alignment").value=r.logo_alignment||"left";$("#company_name").value=r.company_name||"";$("#company_alignment").value=r.company_alignment||"left";$("#company_color").value=r.company_color||"#000000";$("#company_weight").value=r.company_weight||"normal";$("#nav_alignment").value=r.nav_alignment||"right";$("#nav_color").value=r.nav_color||"#000000";$("#nav_weight").value=r.nav_weight||"normal";$("#font_size_header").value=r.font_size||14;$("#bar_height_header").value=r.bar_height||60;$("#padding_header").value=r.padding||"8px";$("#link_spacing_header").value=r.link_spacing||16;$("#bg_color_header").value=r.bg_color||"#ffffff";$("#bg_gradient_header").value=r.bg_gradient||"";$("#header_layout_mode").value=r.layout_mode||"row";$("#headerPreview").innerHTML=headerHTML(r)}
 
   function getFooter(){return{
     footer_text:$("#footer_text").value,footer_alignment:$("#footer_alignment").value,footer_color:$("#footer_color").value,
@@ -162,16 +139,10 @@
     bg_color:$("#bg_color_footer").value,bg_gradient:$("#bg_gradient_footer").value,layout_mode:$("#footer_layout_mode").value}}
   function setFooter(r){$("#footer_text").value=r.footer_text||"";$("#footer_alignment").value=r.footer_alignment||"center";$("#footer_color").value=r.footer_color||"#000000";$("#nav_alignment_footer").value=r.nav_alignment_footer||"center";$("#nav_color_footer").value=r.nav_color_footer||"#000000";$("#nav_weight_footer").value=r.nav_weight_footer||"normal";$("#footer_fixed").checked=!!r.footer_fixed;$("#font_size_footer").value=r.font_size||14;$("#bar_height_footer").value=r.bar_height||60;$("#padding_footer").value=r.padding||"8px";$("#link_spacing_footer").value=r.link_spacing||16;$("#bg_color_footer").value=r.bg_color||"#ffffff";$("#bg_gradient_footer").value=r.bg_gradient||"";$("#footer_layout_mode").value=r.layout_mode||"row";$("#footerPreview").innerHTML=footerHTML(r)}
 
-  // 初期ロード
   (async()=>{
-    menus=await loadMenus();
     const header=await loadRow("header");setHeader(header);
     const footer=await loadRow("footer");setFooter(footer);
     $("#saveHeader").onclick=()=>saveRow("header",getHeader());
     $("#saveFooter").onclick=()=>saveRow("footer",getFooter());
-    $$("input,select").forEach(el=>el.addEventListener("input",()=>{
-      if(el.closest("section").querySelector("#headerPreview"))setHeader(getHeader());
-      if(el.closest("section").querySelector("#footerPreview"))setFooter(getFooter());
-    }));
   })();
 </script>
