--- a/index.html
+++ b/index.html
@@ -5,46 +5,166 @@
   <title>合同会社WaJu 公式サイト</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin:0; font-family: "Segoe UI", sans-serif; }
-    header { background:#1f2937; color:white; padding:1rem; }
-    nav ul { list-style:none; display:flex; gap:1rem; margin:0; padding:0; }
-    nav a { color:white; text-decoration:none; }
-    nav a:hover { text-decoration:underline; }
-    main { padding:2rem; min-height:60vh; background:#f9fafb; }
-    section { margin-bottom:2rem; padding:1rem; background:white; border-radius:8px; box-shadow:0 1px 3px rgba(0,0,0,0.1);}
-    footer { background:#111827; color:white; padding:1rem; text-align:center; }
+    /* ===== Base (keep simple) ===== */
+    :root { color-scheme: light; }
+    html, body { margin:0; padding:0; }
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif; }
+    main#site-main { padding:2rem 1.25rem; min-height:60vh; background:#f9fafb; }
+    section { margin-bottom:2rem; padding:1rem; background:#fff; border-radius:8px; box-shadow:0 1px 3px rgba(0,0,0,0.08); }
+
+    /* ===== Header/Footer visual (scoped) ===== */
+    #site-header, #site-footer { isolation:isolate; }
+    .hfbar { display:flex; align-items:center; gap:var(--gap,16px); border-radius:0; }
+    .hfbar.hf-row { justify-content:flex-start; }
+    .hfbar.hf-column { flex-direction:column; align-items:stretch; }
+    .slot { display:flex; align-items:center; }
+    .slot.brand { flex:0 0 auto; }
+    .slot.nav { flex:1 1 auto; }
+    .hf-brand { display:flex; align-items:center; gap:8px; }
+    .hf-brand img { height:auto; max-height:inherit; }
+    .hf-nav { display:flex; gap:var(--gap,16px); flex-wrap:wrap; width:100%; }
+    .hf-nav a { color:inherit; text-decoration:none; border-radius:6px; padding:0 2px; }
+    .hf-copy { font-size:12px; display:flex; width:100%; }
+
+    @media (max-width: 640px) {
+      .hfbar.hf-row { flex-wrap:wrap; }
+    }
   </style>
 </head>
 <body>
-  <header id="site-header">
-    <h1>合同会社WaJu</h1>
-    <nav>
-      <ul id="nav-menu">
-        <!-- メニュー（Supabaseからfetch予定） -->
-      </ul>
-    </nav>
-  </header>
+  <!-- Mount points -->
+  <header id="site-header"></header>
 
   <main id="site-main">
-    <!-- セクション（Supabaseからfetch予定） -->
     <section>
       <h2>ダミーセクション</h2>
-      <p>ここにSupabaseから取得したコンテンツが表示されます。</p>
+      <p>ここにページ編集の内容が反映されます（フック用意済み）。</p>
     </section>
   </main>
 
-  <footer id="site-footer">
-    <p>© 2025 合同会社WaJu</p>
-  </footer>
+  <footer id="site-footer"></footer>
 
-  <script>
-    // ★ ここで Supabase からデータをfetchして描画する予定
-    // 今はダミーデータで動作を確認
-    const navMenu = document.getElementById("nav-menu");
-    ["会社概要","事業内容","求人情報","ブログ","お問い合わせ"].forEach(item=>{
-      const li=document.createElement("li");
-      li.innerHTML=`<a href="#">${item}</a>`;
-      navMenu.appendChild(li);
+  <script type="module">
+    // ---- Supabase init (guard against multiple instances) ----
+    let supabase;
+    if (!window.__supabase) {
+      const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
+      window.__supabase = createClient(
+        "https://htnmjsqgoapvuanrsuma.supabase.co",
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+      );
+    }
+    supabase = window.__supabase;
+
+    // ---- Helpers ----
+    const $ = (q, r=document) => r.querySelector(q);
+    const toJustify = (p) => (p === "left" ? "flex-start" : p === "right" ? "flex-end" : "center");
+    const isUrl = (s) => /^(https?:\/\/|\/)/.test(s || "");
+    const bgOf = (d) => (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
+    const safeBarHeight = (v, fallback) => { const n = Number(v); return Number.isFinite(n) && n > 0 ? n : fallback; };
+
+    // ---- Builders (same logic as admin preview) ----
+    function headerHTML(d, menus) {
+      const items = (menus || [])
+        .filter(m => m.is_active && m.show_in_header)
+        .map(m => `<a href="${m.href || '#'}">${m.title}</a>`)
+        .join("");
+
+      const brandInner = `
+        ${isUrl(d.logo_url) ? `<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${safeBarHeight(d.logo_height || d.bar_height, 60)}px">` : ""}
+        <span style="color:${d.company_color};font-weight:${d.company_weight}">${d.company_name || ""}</span>
+      `;
+
+      const brandWrap = `<div class="slot brand" style="justify-content:${toJustify(d.company_alignment)}">
+        <div class="hf-brand">${brandInner}</div>
+      </div>`;
+
+      const nav = `<nav class="hf-nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)}">${items}</nav>`;
+      const navWrap = `<div class="slot nav" style="justify-content:${toJustify(d.nav_alignment)}">${nav}</div>`;
+
+      const cls = d.layout_mode === "column" ? "hfbar hf-column" : "hfbar hf-row";
+      const fs = Number(d.font_size) || 14;
+      const h  = safeBarHeight(d.bar_height, 60);
+      const pad = d.padding || "8px 12px";
+      const gap = Number(d.link_spacing) || 16;
+
+      return `<div class="${cls}" style="background:${bgOf(d)};font-size:${fs}px;height:${h}px;padding:${pad};--gap:${gap}px">
+        ${brandWrap}${navWrap}
+      </div>`;
+    }
+
+    function footerHTML(d, menus) {
+      const items = (menus || [])
+        .filter(m => m.is_active && m.show_in_footer)
+        .map(m => `<a href="${m.href || '#'}">${m.title}</a>`)
+        .join("");
+
+      const nav = `<nav class="hf-nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)}">${items}</nav>`;
+      const copy = `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight || 'normal'};justify-content:${toJustify(d.footer_alignment)}">${d.footer_text || ""}</div>`;
+
+      let inner = "";
+      if (d.layout_mode === "row") inner = `${copy}${nav}`;
+      else if (d.layout_mode === "nav-top") inner = `${nav}${copy}`;
+      else inner = `${copy}${nav}`;
+
+      const cls = d.layout_mode === "row" ? "hfbar hf-row" : "hfbar hf-column";
+      const fs = Number(d.font_size) || 14;
+      const h  = safeBarHeight(d.bar_height, 60);
+      const pad = d.padding || "8px 12px";
+      const gap = Number(d.link_spacing) || 16;
+      const sticky = d.footer_fixed ? "position:sticky;bottom:0;z-index:10;" : "";
+
+      return `<div class="${cls}" style="${sticky}background:${bgOf(d)};font-size:${fs}px;height:${h}px;padding:${pad};--gap:${gap}px">
+        ${inner}
+      </div>`;
+    }
+
+    // ---- Data loaders ----
+    async function loadMenus() {
+      const { data, error } = await supabase
+        .from("public_menus")
+        .select("*")
+        .order("sort_order", { ascending: true });
+      if (error) { console.warn("menus error:", error); return []; }
+      return data || [];
+    }
+
+    async function loadHF(area) {
+      const { data, error } = await supabase
+        .from("hf_settings")
+        .select("*")
+        .eq("area", area)
+        .single();
+      if (error) { console.warn("hf_settings error:", area, error); return {}; }
+      return data || {};
+    }
+
+    // ---- Mount ----
+    (async () => {
+      const [menus, header, footer] = await Promise.all([
+        loadMenus(),
+        loadHF("header"),
+        loadHF("footer")
+      ]);
+      document.querySelector("#site-header").innerHTML = headerHTML(header, menus);
+      document.querySelector("#site-footer").innerHTML = footerHTML(footer, menus);
+
+      // Sticky footer のとき本文が隠れないように下余白を確保
+      if (footer && footer.footer_fixed) {
+        const h = safeBarHeight(footer.bar_height, 60);
+        document.body.style.paddingBottom = `${h}px`;
+      }
+    })();
+
+    // ---- Page editor hook（将来のページ編集を反映するための入口） ----
+    // 1) 関数で置換
+    window.updateMain = (html) => { document.getElementById("site-main").innerHTML = html; };
+
+    // 2) カスタムイベントでも置換可
+    window.addEventListener("page:update", (ev) => {
+      if (ev?.detail?.html != null) {
+        document.getElementById("site-main").innerHTML = ev.detail.html;
+      }
     });
   </script>
 </body>
